--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   glassmorphism: ^3.0.0
   stacked_card_carousel: ^0.0.4
   lottie: ^2.3.0
+  intl: ^0.17.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
