--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   lottie: ^2.3.0
   intl: ^0.17.0
   auto_size_text: ^3.0.0
+  internet_connection_checker:
+  connectivity_plus:
 
 dev_dependencies:
   flutter_test:
